2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* src/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* inline/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* macros/Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-03-01	Eric Norum <eric.norum@usask.ca>

	* src/pthreadonce.c: Task is not preemptable while running a 
	pthread_once init function.  This is slightly less heavy handed
	than disabling dispatching and seems better than consuming a mutex.

2002-02-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/getegid.c: Add #include <rtems/userenv.h>.
	Remove #include <rtems/libio_.h>.
	* src/geteuid.c: Ditto.
	* src/getgid.c: Ditto.
	* src/getlogin.c: Ditto.
	* src/getuid.c: Ditto.


2001-01-16	Joel Sherrill <joel@OARcorp.com>

	* inline/rtems/posix/mutex.inl (_POSIX_Mutex_Get_support): Corrected
	name of routine in header.

2002-01-07	Joel Sherrill <joel@OARcorp.com>

	* optman/, optman/.cvsignore, optman/Makefile.am: Removed entire
	contents of optman/ directory since it has been moved.

2002-02-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_CONFIG_SRCDIR([src/pthreads.c])
	* src/psignal.c: #include <string.h>.

2001-12-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove optman/Makefile from CONFIG_FILES.
	* Makefile.am: Remove optman from SUBDIRS.

2001-12-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* optman/Makefile.am: Add multilib support. Remove ASM4FLAGS.
	* src/Makefile.am: Add multilib support.

2001-10-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/sys/Makefile.am: Remove.
	* include/rtems/Makefile.am: Remove.
	* include/rtems/posix/Makefile.am: Remove.
	* include/Makefile.am: Handle subdirs.
	* inline/rtems/Makefile.am: Remove.
	* inline/rtems/posix/Makefile.am: Remove.
	* inline/Makefile.am: Handle subdirs.